[package]
name = "command-run"
version = "0.13.1-alpha.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/command-run"
license = "Apache-2.0"
description = "Library for running a command in a subprocess"
readme = "README.md"
keywords = ["command", "run", "cmd", "subprocess", "process"]

[features]
default = ["logging"]
logging = ["log"]

[dependencies]
log = { version = "0.4", optional = true }
os_pipe = "0.9"

[dev-dependencies]
anyhow = "1.0"
once_cell = "1.8"
tempfile = "3.2"
