[package]
name = "command-run"
version = "1.0.3"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2021"
repository = "https://github.com/nicholasbishop/command-run"
license = "Apache-2.0"
description = "Library for running a command in a subprocess"
readme = "README.md"
keywords = ["command", "run", "cmd", "subprocess", "process"]

[features]
default = ["logging"]
logging = ["log"]

[dependencies]
log = { version = "0.4.14", optional = true }
os_pipe = "0.9.2"

[dev-dependencies]
anyhow = "1.0.46"
once_cell = "1.8.0"
tempfile = "3.2.0"
