[package]
name = "command-run"
version = "1.1.1"
edition = "2021"
repository = "https://github.com/nicholasbishop/command-run"
license = "Apache-2.0"
description = "Library for running a command in a subprocess"
keywords = ["command", "run", "cmd", "subprocess", "process"]
categories = ["development-tools"]

[features]
default = ["logging"]
logging = ["log"]

[dependencies]
log = { version = "0.4.14", optional = true }
os_pipe = "0.9.2"

[dev-dependencies]
anyhow = "1.0.45"
once_cell = "1.8.0"
tempfile = "3.2.0"
